overflow fix

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 
 body{
   background-color: #F8F8FA;
+  overflow-x: hidden;
 
 }
 
